# owl

./: .gitignore  Cargo.toml  example_config.toml
src/: bar.rs  config.rs  error.rs  lib.rs  main.rs  udev.rs  wayland.rs
src/modules/: battery.rs  mod.rs
src/modules/sway/: ipc.rs  mod.rs
